# lomnia-plugins

./: .gitignore  README.md
example/: .gitignore  pyrightconfig.json
example/src/hares/: version.py
example/src/hares/extract/: cli.py  run.py
example/src/hares/transform/: meta.py  run.py
firefox/: README.md  pyproject.toml
firefox/src/firefox/: config.py  version.py
firefox/src/firefox/extract/: cli.py  meta.py  run.py
firefox/src/firefox/transform/: cli.py  meta.py  models.py  restore_sqlite_from_gzip_dump.py  run.py  schemas.py
firefox/src/firefox/transform/mappers/: transformer_params.py  visit.py  visit_type.py  website.py
firefox/src/firefox/transform/mappers/utils/: microseconds_to_datetime.py
garmin/: README.md  pyproject.toml
garmin/src/garmin/: config.py  version.py
garmin/src/garmin/extract/: cli.py  meta.py  run.py
garmin/src/garmin/transform/: cli.py  meta.py  models.py  run.py  schemas.py
garmin/src/garmin/transform/mappers/: device.py  device_status.py  exercise.py  hr.py  location.py  sleep.py  sleep_movements.py  sleep_stage.py
garmin/src/garmin/transform/mappers/utils/: get_sleep_id.py  iso_utc.py  remove_none_values.py  to_utc_iso_from_epoch.py
garmin/src/garmin/transform/models/: activity.py  device.py  hr.py  sleep.py
garmin/src/garmin/transform/parsers/: activity.py
hares/: README.md  pyproject.toml
hares/src/hares/: config.py
hares/src/hares/extract/: meta.py  run.py
hares/src/hares/transform/: cli.py  run.py
hares/src/hares/transform/mappers/: habit.py
hares/src/hares/transform/mappers/utils/: unitx_to_utc_iso.py
legacy-locations/: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json
legacy-locations/src/legacy_locations/: config.py  extract.py  transform_cli.py  version.py
legacy-locations/src/legacy_locations/common/: helpers.py
legacy-locations/src/legacy_locations/extract/: cli.py  meta.py  run.py
legacy-locations/src/legacy_locations/transform/: cli.py  helpers.py  meta.py  models.py  normalize.py  read_jsonl.py  run.py  schemas.py  transform.py  transformer_config.py  transformer_run_metadata.py
legacy-locations/src/legacy_locations/transform/mappers/: battery_status.py  connection_status.py  device.py  device_status.py  location.py  transformer_params.py  trigger.py
legacy-locations/tests/: test_foo.py
obsidian-habits/: .gitignore  README.md  pyproject.toml
obsidian-habits/src/obsidian_habits/: config.py  version.py
obsidian-habits/src/obsidian_habits/extract/: cli.py  meta.py  run.py
obsidian-habits/src/obsidian_habits/transform/: cli.py  meta.py  run.py  schemas.py
obsidian-habits/src/obsidian_habits/transform/mappers/: habit.py
owntracks-recorder/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
owntracks-recorder/src/owntracks_recorder/: config.py  extract.py  owntracks_location.py  transform.py  transform_run_metadata.py  version.py
owntracks-recorder/src/owntracks_recorder/extract/: cli.py  meta.py  run.py
owntracks-recorder/src/owntracks_recorder/transform/: api.py  cli.py  meta.py  run.py  schemas.py
owntracks-recorder/src/owntracks_recorder/transform/mappers/: battery_status.py  connection_status.py  device.py  device_status.py  location.py  transformer_params.py  trigger.py
owntracks-recorder/src/owntracks_recorder/transform/mappers/utils/: iso_utc.py
owntracks-recorder/tests/: test_foo.py
